--- a/HM4.ipynb
+++ b/HM4.ipynb
@@ -35,7 +35,7 @@
       "source": [
         "# Home 4: Build a CNN for image recognition.\n",
         "\n",
-        "### Name: [Your-Name?]\n"
+        "### Name: [Junyan Yang]\n"
       ]
     },
     {
